objects/Stratics__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Account_id__c</fullName>
        <description>Account id</description>
        <inlineHelpText>Account id</inlineHelpText>
        <label>Account id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Point__c</fullName>
        <description>End Point</description>
        <inlineHelpText>End Point</inlineHelpText>
        <label>End Point</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>api_key__c</fullName>
        <description>api key</description>
        <inlineHelpText>api key</inlineHelpText>
        <label>api key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dnc_type__c</fullName>
        <description>dnc type</description>
        <inlineHelpText>dnc type</inlineHelpText>
        <label>dnc type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isLogSuccess__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do you want to log success ?</description>
        <inlineHelpText>Do you want to log success ?</inlineHelpText>
        <label>Do you want to log success ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>reason__c</fullName>
        <description>reason</description>
        <inlineHelpText>reason</inlineHelpText>
        <label>reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Stratics</label>
</CustomObject>